2003-12-10  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c, src/gerbv_screen.h: Added Save Project and handles
	  if a filename was given, either when loading or a previous save.

2003-12-09  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, */Makefile.am: Added a recursive chain of Makefile.am
	  to be able to run make dist and make distcheck. Proposed by Dan 
	  McMahill. Thanks!

2003-12-07  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c, src/project.[hc]: Project now saves ev. inversion of
	  layer, all layers accept all parameters and commandline switch
	  --project=<project file> also works.

	* src/gerbv.c, src/gerbv_screen.h: Added invert layer functionality.
	  Closes feature request 777547.

2003-12-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_file.[hc]: Added function gerb_find_file.
	* src/draw_amacro.c: Forgot to make some internal functions static.
	* src/*: Scheme interpreter added to be used by project files as a 
	  start. Also project file handling added. A short description of
	  the format used in project files also added. A massive commit.

2003-11-22  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, acconfig.h: acconfig.h removed and more information
	  added to configure.in after information in warning messages from
	  autoheader.

2003-11-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/export_image.c: Changes pixbuf_to_file_as_png simplify operation
	  No major speedup since that is not the time hog.

-- Release 0.15 --

2003-10-06  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Drawing of aperture macro primitive 7 was
	  severly broken. Revealed by Drew Moore who sent an example 
	  along. Thanks Drew! Closes bug #818307.

2003-09-28  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: Patch from Peter Brueckner. Some Gerbers don't
	  have G04 but just G4. Peters patch fixes that for G- and M-codes.

2003-09-08  Stefan Petersen  <spe@stacken.kth.se>
